docs/envoy/v1.11.0/_sources/api-v2/config/filter/http/original_src/v2alpha1/original_src.proto.rst.txt
.. _envoy_api_file_envoy/config/filter/http/original_src/v2alpha1/original_src.proto:

Original Src Filter
===================

Use the Original source address on upstream connections.

.. _envoy_api_msg_config.filter.http.original_src.v2alpha1.OriginalSrc:

config.filter.http.original_src.v2alpha1.OriginalSrc
----------------------------------------------------

`[config.filter.http.original_src.v2alpha1.OriginalSrc proto] <https://github.com/envoyproxy/envoy/blob/v1.11.0/api/envoy/config/filter/http/original_src/v2alpha1/original_src.proto#L18>`_

The Original Src filter binds upstream connections to the original source address determined
for the request. This address could come from something like the Proxy Protocol filter, or it
could come from trusted http headers.

.. code-block:: json

  {
    "mark": "..."
  }

.. _envoy_api_field_config.filter.http.original_src.v2alpha1.OriginalSrc.mark:

mark
  (`uint32 <https://developers.google.com/protocol-buffers/docs/proto#scalar>`_) Sets the SO_MARK option on the upstream connection's socket to the provided value. Used to
  ensure that non-local addresses may be routed back through envoy when binding to the original
  source address. The option will not be applied if the mark is 0.
  
  

